# graph-rendering

./: .gitignore  CMakeLists.txt
include/: shader.h
shaders/: fragment_shader.glsl
src/: main.cpp
src/objects/: Cube.h  Floor.h  Object.h  Objects.h
src/utils/: mouse_callbacks.cpp  mouse_callbacks.h  process_input.cpp  process_input.h
